<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:background="#effefc"
    android:gravity="center"
    tools:context=".MainPage" >

   

    <RelativeLayout
        android:id="@+id/biuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1fbba6"
        android:gravity="right" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:src="@drawable/logo_biu" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/logo"
            android:layout_alignParentRight="true"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:scaleType="center"
            android:src="@drawable/settings" />
    </RelativeLayout>


        
    <ImageView
        android:id="@+id/slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#1fbba6"       
        android:src="@drawable/slide" />

    <ImageButton
        android:id="@+id/slideUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/slide"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:scaleType="center"
        android:src="@drawable/slideup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/biuTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_border"
        android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_border"
                android:orientation="vertical"
                android:padding="5dp" >
                
                <RelativeLayout
			        android:id="@+id/peopleReceivedTitle"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"			        
			        android:gravity="right" >
			        
                    <TextView
			            android:id="@+id/textPeopleReceived"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentLeft="true"
			            android:layout_centerVertical="true"
			            android:layout_gravity="left"
			            android:layout_marginLeft="0dp"
			            android:text="@string/people_received"
			            android:textColor="#148475"
			            android:textSize="30sp" />
		
			        <Button
			            android:id="@+id/closeButton"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentRight="true"
			            android:layout_centerVertical="true"
			            android:layout_margin="0dp"
			            android:background="#a5a5a5"
			            android:padding="0dp"
			            android:scaleType="center"
			            android:text="@string/close"
			            android:textColor="#ffffff"
			            android:textSize="25sp" />
	
			        <Button
			            android:id="@+id/selectAllButton"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentTop="true"
			            android:layout_marginRight="5dp"
			            android:layout_toLeftOf="@+id/closeButton"
			            android:background="#a5a5a5"
			            android:text="@string/select_all"
			            android:textColor="#ffffff"
			            android:textSize="25sp" />

		    	</RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                       	android:clickable = "true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:background="@drawable/received_card_border"
                        android:orientation="vertical"
                        android:id="@+id/accept" >
                        
                        <TextView
                            android:id="@+id/nameReceived"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/name_received"
                            android:textColor="#148475"
                            android:textSize="25sp" />
                        
                        <TextView
                            android:id="@+id/swapState"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="3dp"
                            android:textColor="#148475"
                            android:textSize="15sp" />
                        
                    </LinearLayout>

                    

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>