<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:background="#effefc"
    android:gravity="center"
    tools:context=".MainPage" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/biuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1fbba6"
            android:gravity="right" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="left"
                android:src="@drawable/logo_biu" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/logo"
                android:layout_alignParentRight="true"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:scaleType="center"
                android:src="@drawable/settings" />
        </RelativeLayout>

        <TextView
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/biu" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/airplane" />

    </LinearLayout>
        
    <ImageView
        android:id="@+id/slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#1fbba6"       
        android:src="@drawable/slide" />

    <ImageButton
        android:id="@+id/slideUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/slide"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:scaleType="center"
        android:src="@drawable/slideup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/slideUp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/card_border"
        android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_border"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <RelativeLayout
                        android:id="@+id/peopleReceivedTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right" >

                        <TextView
                            android:id="@+id/textPeopleSent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="left"
                            android:layout_marginLeft="0dp"
                            android:text="@string/people_sent"
                            android:textColor="#148475"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/cancelButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="0dp"
                            android:background="#a5a5a5"
                            android:minHeight="@android:dimen/app_icon_size"
                            android:padding="0dp"
                            android:scaleType="center"
                            android:text="@string/cancel"
                            android:textColor="#ffffff"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >
                            
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:background="#f4f4f4"
                                android:orientation="vertical"
                                android:padding="3dp" >

                                <ImageButton
                                    android:id="@+id/deleteButton"
                                 	android:padding="3dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_margin="0dp"
                                    android:focusableInTouchMode="true"
                                    android:src="@drawable/delete" />

                                <TextView
                                    android:id="@+id/nameToSend"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/name_received"
                                    android:textColor="#148475"
                                    android:textSize="25sp" />
                            </LinearLayout>
                            
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>

</RelativeLayout>